modules/network/vpc.tf
resource "aws_vpc" "eks" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(local.tags, {
    Name = "${var.cluster_name}-${var.environment}-vpc"
  })
}
